--- a/packages/apollo-mock-client/package.json
+++ b/packages/apollo-mock-client/package.json
@@ -17,7 +17,7 @@
     "just": "monorepo-scripts"
   },
   "devDependencies": {
-    "@apollo/client": ">= ^3.3.0 < 3.7.0",
+    "@apollo/client": ">= 3.3.0 < 3.7.0",
     "@graphitation/graphql-js-tag": "^0.10.0",
     "@graphitation/graphql-js-operation-payload-generator": "^0.13.0",
     "@types/invariant": "^2.2.34",
@@ -30,7 +30,7 @@
     "react-test-renderer": "^18.2.0"
   },
   "peerDependencies": {
-    "@apollo/client": ">= ^3.3.0 < 3.7.0",
+    "@apollo/client": ">= 3.3.0 < 3.7.0",
     "graphql": "^15.0.0"
   },
   "dependencies": {
