--- a/packages/graphql-codegen-resolvers-models/package.json
+++ b/packages/graphql-codegen-resolvers-models/package.json
@@ -24,7 +24,7 @@
   },
   "peerDependencies": {
     "@graphql-codegen/plugin-helpers": ">= 1.18.0 < 2",
-    "@graphql-codegen/visitor-plugin-common": ">= ^1.17.0 < 2",
+    "@graphql-codegen/visitor-plugin-common": ">= 1.17.0 < 2",
     "typescript": "^5.5.3"
   },
   "dependencies": {},
