--- a/packages/graphql-codegen-supermassive-typed-document-node-plugin/package.json
+++ b/packages/graphql-codegen-supermassive-typed-document-node-plugin/package.json
@@ -26,7 +26,7 @@
   },
   "peerDependencies": {
     "@graphql-codegen/plugin-helpers": ">= 1.18.0 < 2",
-    "@graphql-codegen/visitor-plugin-common": ">= ^1.17.0 < 2",
+    "@graphql-codegen/visitor-plugin-common": ">= 1.17.0 < 2",
     "graphql-tag": ">= 2.11.0 < 3",
     "@graphql-tools/optimize": "^1.0.1",
     "@graphitation/supermassive": "^3.11.10"
