--- a/examples/apollo-devtools-playground/package.json
+++ b/examples/apollo-devtools-playground/package.json
@@ -1,25 +1,32 @@
 {
   "name": "graphql-playground",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "start": "react-scripts start"
+  "dependencies": {
+    "@apollo/client": "~3.6.0",
+    "@fluentui/react-components": "^9.18.9",
+    "@graphitation/apollo-forest-run": "0.19.1",
+    "@graphql-tools/schema": "^7.1.5",
+    "graphql": "^15.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "uuid": "^8.3.2"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "scripts": {
+    "start": "webpack serve"
   },
   "devDependencies": {
-    "react-scripts": "^5.0.0"
-  },
-  "resolutions": {
-    "@babel/traverse": "^7.23.0"
+    "@types/node": "^12.0.0",
+    "@types/react": "^18.2.29",
+    "@types/react-dom": "^18.2.0",
+    "@types/uuid": "^8.3.4",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^4.7.2",
+    "ts-loader": "9.3.1",
+    "ts-node": "^10.2.1",
+    "typescript": "^5.5.3",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2",
+    "webpack-dev-server": "^4.13.3"
   }
 }
