--- a/packages/rempl-apollo-devtools/package.json
+++ b/packages/rempl-apollo-devtools/package.json
@@ -18,31 +18,32 @@
     "just": "monorepo-scripts"
   },
   "devDependencies": {
-    "@graphitation/apollo-forest-run": "^0.20.0",
     "@apollo/client": "~3.6.0",
     "@emotion/react": "^11.8.1",
     "@fluentui/react-components": "^9.18.9",
     "@fluentui/react-data-grid-react-window": "^9.0.0-beta.21",
     "@fluentui/react-icons": "2.0.166-rc.3",
+    "@fluentui/react-virtualizer": "9.0.0-alpha.47",
+    "@graphitation/apollo-forest-run": "^0.20.0",
     "@graphql-tools/schema": "^7.1.5",
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.isequal": "^4.5.5",
-    "@types/react-dom": "^18.2.0",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/react-router": "^5.1.18",
     "@types/react": "^18.2.29",
+    "@types/react-dom": "^18.2.0",
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4",
-    "apollo-inspector-ui": "^0.0.8",
     "apollo-inspector": "^1.17.6",
+    "apollo-inspector-ui": "^0.0.8",
     "graphiql": "^2.0.9",
     "graphql": "^15.6.1",
     "hotkeys-js": "^3.8.7",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "object-sizeof": "^1.6.1",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.3",
-    "react": "^18.2.0",
     "rempl": "^1.0.0-alpha.24",
     "rxjs": "^7.8.1",
     "scheduler": "^0.20.2",
